# marketos

./: .gitignore  MarketOS_Architecture_Blueprint.docx.md  README.md  api.py  debug_pipeline.py  demo_full_pipeline.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt  task.md  test_all_agents.py  test_energy_drink.py  test_serper_intel.py  worker.py
agents/ab_test/: ab_test_agent.py
agents/analytics/: analytics_agent.py
agents/competitor/: competitor_agent.py
agents/compliance/: compliance_agent.py
agents/copy/: copy_agent.py
agents/creative/: image_engine.py
agents/email/: email_agent.py
agents/finance/: finance_agent.py
agents/lead_scoring/: lead_scoring_agent.py
agents/llm/: llm_provider.py
agents/monitor/: monitor_agent.py
agents/onboarding/: onboarding_agent.py
graph/: campaign_graph.py
infra/: create_topics.sh  init_clickhouse.sql  init_phase3.sql  init_phase4.sql  init_postgres.sql  migrate_hnsw.sql  start_ch_sink.py
schemas/: campaign.py
tests/: AGENT_PROMPT.md  agent_api_tests.md  conftest.py  pytest.ini  test_ab_test.py  test_analytics.py  test_compliance.py  test_copy.py  test_e2e_pipeline.py  test_email.py  test_finance.py  test_graph_import.py  test_integration_clickhouse.py  test_integration_db.py  test_integration_kafka.py  test_integration_memory.py  test_lead_scoring.py  test_monitor.py  test_onboarding.py  test_personalization.py  test_reporting.py  test_sms.py  test_social.py  test_supervisor.py  test_voice.py
utils/: clickhouse_sink.py  dlq_handler.py  kafka_bus.py  sendgrid_mailer.py
(+7 files in other folders)
