[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketos"
version = "0.1.0"
description = "MarketOS Agentic Architecture"
authors = [
    {name = "MarketOS Team", email = "team@marketos.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "graph*", "schemas*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
